fixed: overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ p{
 	padding: 0;
 }
 
+.PAI-overflow-auto{
+	overflow: auto;
+}
+
 .active-modal {
 	overflow-y: hidden;
 }
